FIx on overflow for buttns for PyGame

--- a/runestone/activecode/css/activecode.css
+++ b/runestone/activecode/css/activecode.css
@@ -107,3 +107,13 @@
 .ac-feedback {
 	border: 1px solid black;
 }
+
+
+
+@media only screen and (max-width: 500px) {
+	.ac_actions {
+		overflow: hidden;
+	}
+
+
+}
